# reAction

./: CMakeLists.txt  README.md
Gui/: CMakeLists.txt  defines.h  main.cpp  qml_desktop.qrc  qml_phone.qrc
Gui/qml/desktop/: main.qml
Gui/qml/phone/: main.qml
Lib/: CMakeLists.txt
Tests/: CMakeLists.txt  example1.cpp  example2.cpp
